# template-llm-evals-project

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  claude-worktree.sh  clean-worktrees.sh  pyproject.toml  setup.md
.claude/: settings.json
src/: clip_server.py  example_download_dataset.py  example_response_length.py
src/common/: path_utils.py  safetytooling_wrappers.py  utils.py
