[project]
name = "template-project"
version = "0.1.0"
description = "Template project"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "simple-parsing",
    "face-recognition",
    "transformers",
    "torch",
    "pillow",
    "opencv-python",
    "tqdm",
    "starlette",
    "uvicorn",
    "httpx",
    "numpy",
    "jsonlines",
    "pandas",
    "matplotlib",
    "wandb",
]

[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]
extend-exclude = ["submodules"]
exclude = [
  "safety-tooling",
  "*.ipynb",
  "README.md",
]

# Line length 120 to makes it easier to have multiple files open side-by-side.
line-length = 120

[tool.ruff.lint]
# Check that imports are sorted
extend-select = ["I"]
ignore = [
  # line too long
  "E501",
  # module level import not at top of file
  "E402",
  # ambiguous variable name
  "E741",
  # local variable name is assigned to but never used
  "F841",
  # import star
  "F403",
]

[tool.ruff.lint.isort]
# wandb is a package, but sometimes also a folder that gets created.
# We tell ruff to treat it always as a third-party package to make import
# sorting consistent.
known-third-party = ["wandb"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
